# morpheum-signing

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  signing.md
crates/core/: Cargo.toml
crates/core/src/: builder.rs  claim.rs  cryptogram_bridge.rs  error.rs  lib.rs  mapper.rs  nonce.rs  signer.rs  types.rs  verifier.rs  wallet_adapter.rs
crates/native/: Cargo.toml
crates/native/examples/: agent.rs  agent_with_claim_verification.rs  native.rs
crates/native/src/: lib.rs  signers.rs
crates/native/src/adapters/: metamask.rs  mod.rs  phantom.rs  taproot.rs
crates/native/src/providers/: mod.rs  portal.rs  sentry.rs
crates/native/src/signers/: agent.rs  bitcoin.rs  evm.rs  mod.rs  native.rs  solana.rs
crates/native/tests/: integration.rs
crates/native/tests/integration/: agent_flow.rs  claim_tests.rs  common.rs  cross_crate_signing.rs  error_cases.rs  multi_chain.rs  native_flow.rs  security_tests.rs  signer_info_tests.rs  signing_flows.rs
crates/wasm/: Cargo.toml
crates/wasm-lib/: Cargo.toml
crates/wasm-lib/src/: lib.rs  metamask.rs  phantom.rs  signer.rs  taproot.rs
crates/wasm/src/: bindings.rs  lib.rs
crates/wasm/src/adapters/: metamask.rs  mod.rs  phantom.rs  taproot.rs
docs/: cryptogram.md
examples/: agent.rs  browser_metamask.ts  browser_phantom.ts  native.rs  native_agent.rs  native_human.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_address_mapping.rs  fuzz_claim_construction.rs  fuzz_claim_encoding.rs  fuzz_seed_generation.rs
tests/: agent_flow.rs  common.rs  error_cases.rs  human_flow.rs  integration.rs  multi_chain.rs  native_flow.rs
ts/: package.json
