[workspace]
members = [
    "crates/core",
    "crates/native",
    "crates/wasm",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
repository = "https://github.com/morpheum-labs/signing"
homepage = "https://morpheum.xyz"
keywords = ["blockchain", "signing", "multi-chain", "agent", "wallet"]
categories = ["cryptography", "development-tools"]
readme = "README.md"

[workspace.dependencies]
# Core primitives
morpheum-primitives = { path = "../mormcore/crates/primitives", package = "morm-primitives", features = ["full-protos"] }

# Shared minimal dependencies
prost = { version = "0.14", default-features = false, features = ["derive"] }
prost-types = "0.14"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
zeroize = { version = "1.8", default-features = false, features = ["derive"] }
secrecy = "0.8"
async-trait = "0.1"
sha2 = "0.10"
hex = "0.4"

# Native-only crypto libraries (optionality set per-crate, not here)
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde", "zeroize"] }
k256 = { version = "0.13", features = ["ecdsa", "serde"] }
bitcoin = { version = "0.32", features = ["serde"] }

# Native networking & runtime (optionality set per-crate, not here)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde_json = "1.0"

# WASM-only
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4"
tsify = { version = "0.4", features = ["js"] }
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = ["Window", "Navigator", "console"] }
console_error_panic_hook = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"