[package]
name = "morpheum-signing-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core no_std library for Morpheum universal signing (traits, types, TxBuilder)"

[lib]
crate-type = ["lib"]

[features]
default = []
# Enables std support (required for native and some WASM features)
std = ["prost/std", "zeroize/std", "secrecy/std"]
# Enables WASM-specific bindings (tsify, wasm-bindgen)
wasm = ["wasm-bindgen", "tsify"]

[dependencies]
morpheum-primitives = { workspace = true }

prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
secrecy = { workspace = true }
async-trait = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

# WASM support (optional)
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true, optional = true }
tsify = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }