[package]
name = "morpheum-signing-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core no_std library for Morpheum universal signing (traits, types, TxBuilder)"

[lib]
crate-type = ["lib"]

[features]
default = []
# Enables std support (required for native and some WASM features)
std = ["prost/std", "zeroize/std"]
# Enables WASM-specific bindings (tsify, wasm-bindgen)
wasm = ["wasm-bindgen", "tsify"]
# Dynamic SignerInfo based on signer type (Phase 1)
dynamic-signer-info = []
# TradingKeyClaim embedding & verification (Phase 2)
claim-verification = []
# Full cryptographic verification (ed25519 + secp256k1 + keccak256) for chain-side verifier
full-crypto = ["dep:ed25519-dalek", "dep:k256", "dep:sha3"]
# Cryptogram integration: universal signing, HD derivation, address validation,
# agent delegation, EIP-712 support. Requires std.
cryptogram = ["std", "dep:morpheum-crypto", "dep:cryptogram-crypto"]

[dependencies]
morpheum-primitives = { workspace = true }

prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
secrecy = { workspace = true }
async-trait = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

# Cryptographic verification backends (optional, feature-gated)
ed25519-dalek = { version = "2.1", default-features = false, features = ["zeroize"], optional = true }
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "arithmetic", "alloc"], optional = true }
sha3 = { version = "0.10", default-features = false, optional = true }

# Cryptogram workspace — unified crypto, types, and standards (optional, feature-gated)
morpheum-crypto = { workspace = true, optional = true }

# Explicit dependency on cryptogram-crypto for supply-chain visibility
# (`cargo audit`, `cargo tree`) and direct re-export of low-level primitives.
cryptogram-crypto = { workspace = true, optional = true }

# WASM support (optional)
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true, optional = true }
tsify = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }