[package]
name = "morpheum-signing-native"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Native (std) concrete implementations for Morpheum Signing SDK"

[dependencies]
morpheum-signing-core = { path = "../core", features = ["std"] }

# Networking & runtime
reqwest = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

# Cryptography (all optional via features)
ed25519-dalek = { workspace = true, optional = true }
k256 = { workspace = true, optional = true }
bitcoin = { workspace = true, optional = true }

# BIP-39 mnemonic support (optional)
bip39 = { workspace = true, optional = true }

# Protobuf (for Message::encode_to_vec in signers)
prost = { workspace = true }

# Hashing (for BIP-340 Schnorr message digests and BIP-32 HD derivation)
sha2 = { workspace = true }
hmac = { workspace = true }

# Security & serialization
zeroize = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
async-trait = { workspace = true }

[features]
# Default: full feature set for most use cases
default = ["full"]

# Networking for nonce providers (Sentry + Portal)
http = ["dep:reqwest", "dep:tokio"]

# Individual crypto backends
ed25519 = ["dep:ed25519-dalek"]
secp256k1 = ["dep:k256"]
schnorr = ["dep:bitcoin"]

# Convenience groups
native = ["ed25519"]           # HumanSigner + AgentSigner
evm = ["secp256k1"]            # EvmSigner + MetaMask local fallback
solana = ["ed25519"]           # SolanaSigner
bitcoin = ["schnorr"]          # BitcoinSigner (Taproot)

# Full crypto support
full-crypto = ["native", "evm", "solana", "bitcoin"]

# BIP-39 mnemonic derivation
bip39 = ["dep:bip39"]

# Forward audit-driven features to core
claim-verification = ["morpheum-signing-core/claim-verification"]
dynamic-signer-info = ["morpheum-signing-core/dynamic-signer-info"]

# Chain-side transaction verification (ed25519 + secp256k1) — forwards to core
verifier = ["morpheum-signing-core/full-crypto"]

# Cryptogram integration (universal signing, HD derivation, address validation,
# agent delegation, EIP-712 support) — forwards to core
cryptogram = ["morpheum-signing-core/cryptogram"]

# Everything
full = ["http", "full-crypto", "bip39", "claim-verification", "dynamic-signer-info"]

[dev-dependencies]
morpheum-crypto = { workspace = true }